--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -10,7 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginTop="95dp">
+        android:layout_marginTop="75dp">
         <com.mikhaellopez.circularimageview.CircularImageView
             android:layout_width="150dp"
             android:layout_height="150dp"
@@ -39,7 +39,7 @@
             android:layout_height="match_parent"
             android:id="@+id/email_tv"
             android:gravity="center"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
     </LinearLayout>
 
     <FrameLayout
@@ -63,7 +63,7 @@
             android:layout_height="match_parent"
             android:id="@+id/phonenumber_tv"
             android:gravity="center"
-            android:textSize="20dp"/>
+            android:textSize="20sp"/>
     </LinearLayout>
 
     <FrameLayout
